[package]
name = "vice-city"
version = "0.1.0"
edition = "2018"
authors = [
    "Omer <omer.shlomovits@gmail.com>"
]
keywords = [
    "RSA",
    "MPC",
]

homepage = "https://github.com/KZen-networks/vice-city"
repository = "https://github.com/KZen-networks/vice-city"
license = "GPL-3.0-or-later"
categories = ["cryptography"]

[lib]
crate-type = ["lib"]


[dependencies]
paillier = { git = "https://github.com/KZen-networks/rust-paillier", tag = "v0.3.4"}
zk-paillier = { git = "https://github.com/KZen-networks/zk-paillier", tag = "v0.2.9"}
subtle = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
zeroize = "0.10.1"
serde_derive = "1.0"
serde_json = "1.0"
elgamal = {git = "https://github.com/ZenGo-X/rust-elgamal"}
rayon = "1.4.0"
bit-vec = "0.6"
rand = "0.6"

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
tag = "v0.2.6"
features = ["ec_secp256k1"]


[dev-dependencies]
criterion = "0.3"
rust-crypto = "0.2"
hex = "0.4"
rocket = { version = "0.4.2", default-features = false }
rocket_contrib = "0.4.2"
reqwest = { version = "0.9", default-features = false }
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
libsecp256k1 = "0.3.2"

[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }

